navigation for my-scenes, new and edit. TODO: fix routing for 'edit'

--- a/src/app/scenery/observe/scene-detail/scene-detail.page.html
+++ b/src/app/scenery/observe/scene-detail/scene-detail.page.html
@@ -1,9 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>scene-detail</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/scenery/tabs/observe"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Scene Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-button color="primary" margin (click)="onVisitScene()">Visit</ion-button>
 </ion-content>
