--- a/src/app/scenery/my-scenes/my-scenes.page.html
+++ b/src/app/scenery/my-scenes/my-scenes.page.html
@@ -1,9 +1,30 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>my-scenes</ion-title>
+    <ion-title>My Scenes</ion-title>
+    <ion-button slot="primary" routerLink="/scenery/tabs/my-scenes/new">
+      <ion-icon name="add" slot="icon-only"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
- 
-</ion-content>
+<ion-content padding>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12" size-sm="8" offset-sm="2" text-center>
+          <ion-list>
+            <ion-item *ngFor="let scene of myScenes.slice(1)" 
+              [routerLink]="['/','scenery','tabs','my-scenes', scene.id]"
+              detail
+            >
+              <ion-thumbnail slot="start">
+                <ion-img [src]="scene.imageUrl"></ion-img>
+              </ion-thumbnail>
+              <ion-label>
+                <h2>{{ scene.title }}</h2>
+              </ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
