fix 'edit-scene' route

--- a/src/app/scenery/my-scenes/edit-scene/edit-scene.page.html
+++ b/src/app/scenery/my-scenes/edit-scene/edit-scene.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>edit-scene</ion-title>
+    <ion-title>Edit Scene</ion-title>
   </ion-toolbar>
 </ion-header>
 
