--- a/src/app/scenery/my-scenes/my-scenes.page.html
+++ b/src/app/scenery/my-scenes/my-scenes.page.html
@@ -12,7 +12,7 @@
       <ion-row>
         <ion-col size="12" size-sm="8" offset-sm="2" text-center>
           <ion-list>
-            <ion-item *ngFor="let scene of myScenes.slice(1)" 
+            <ion-item *ngFor="let scene of myScenes" 
               [routerLink]="['/','scenery','tabs','my-scenes', scene.id]"
               detail
             >
