scene-detail and edit-scene data and routes

--- a/src/app/scenery/observe/scene-detail/scene-detail.page.html
+++ b/src/app/scenery/observe/scene-detail/scene-detail.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/scenery/tabs/observe"></ion-back-button>
     </ion-buttons>
-    <ion-title>Scene Details</ion-title>
+    <ion-title>{{ scene.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
