--- a/src/app/scenery/my-scenes/edit-scene/edit-scene.page.html
+++ b/src/app/scenery/my-scenes/edit-scene/edit-scene.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="'/scenery/tabs/my-scenes/' + scene.id"></ion-back-button>
+    </ion-buttons>
     <ion-title>Edit Scene</ion-title>
   </ion-toolbar>
 </ion-header>
